# OpenAPI2MCP

./: README.md  pyproject.toml  requirements.txt
example/: README.md  executor.py  pyproject.toml  server.py  tools.py
src/openapi2mcp/: __init__.py  cli.py  generator.py  parser.py  schema.py
src/openapi2mcp/templates/: README.md.j2  executor.py.j2  pyproject.toml.j2  server.py.j2  tools.py.j2
