[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openapi2mcp"
version = "0.1.0"
description = "Generate a Python MCP server from a Swagger/OpenAPI spec"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "mcp>=1.0",
    "pyyaml>=6",
    "starlette>=0.37",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
openapi2mcp = "openapi2mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openapi2mcp = ["templates/*.j2"]
